Fix inline line highlight padding, wrapping, and gutter background - Line highlight pad should match the parent - Float the gutter left to force code and numbers not to wrap - Provide a background for the gutter

--- a/src/assets/stylesheets/extensions/_codehilite.scss
+++ b/src/assets/stylesheets/extensions/_codehilite.scss
@@ -194,8 +194,8 @@ $codehilite-whitespace: transparent;
   // Highlighted lines
   .hll {
     display: block;
-    margin: 0 px2rem(-16px);
-    padding: 0 px2rem(16px);
+    margin: 0 px2em(-16px, 13.6px);
+    padding: 0 px2em(16px, 13.6px);
     background-color: transparentize($clr-yellow-500, 0.5);
   }
 }
